overflow corrected

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     rgb(53, 30, 30) 50%,
     rgba(0, 0, 0, 1) 100%
   );
-  overflow: hidden;
+ overflow-x: hidden;
 }
 .container {
   max-width: 1440px;
